k8s/observability/prometheus-action-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-action
  namespace: monitoring
  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
    name: web
  selector:
    app: prometheus
